# py-flatten-json

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_flatten_json/: __init__.py
tests/: test_flatten_json.py
