[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-flatten-json"
version = "0.2.0"
description = "Flatten nested JSON/dicts into dot-notation keys and unflatten back"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["json", "flatten", "unflatten", "nested", "dot-notation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-flatten-json#readme"
Repository = "https://github.com/philiprehberger/py-flatten-json"
Issues = "https://github.com/philiprehberger/py-flatten-json/issues"
Changelog = "https://github.com/philiprehberger/py-flatten-json/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_flatten_json"]
